# MNIST_classifier

./: README.md  evaluate.dockerfile.txt  model.pth  pyproject.toml  requirements.txt  tasks.py  train.dockerfile.txt
configs/: config_train.yaml  sweep.yaml
dockerfiles/: api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_0/: events.out.tfevents.1736421548.AndreasPC.9804.0
models/: model.pth
src/mnist_classifier/: greetings.py  train.py  train_old.py  train_wandb.py  visualize.py
tests/: test_data.py
wandb/run-20250109_111457-2x3ec6vj/: run-2x3ec6vj.wandb
wandb/run-20250109_111943-gg0rzbab/: run-gg0rzbab.wandb
wandb/run-20250109_112829-zjro6a7e/: run-zjro6a7e.wandb
wandb/run-20250109_114615-ysp4bu8j/: run-ysp4bu8j.wandb
wandb/run-20250110_143824-yw4sa3wu/: run-yw4sa3wu.wandb
wandb/sweep-7w3mgyyn/: config-1wl1me1x.yaml  config-808ogdg1.yaml  config-d95gpvew.yaml
wandb/sweep-a0qqto45/: config-6sqdqqix.yaml  config-flzlhta7.yaml  config-zmdckg60.yaml
wandb/sweep-o21x2nqb/: config-40ilx4wq.yaml  config-58qgtual.yaml  config-9zx4a6ju.yaml  config-agutpc36.yaml  config-e2pxalj8.yaml  config-l8wb0xmk.yaml  config-onn4kash.yaml  config-ujops0hz.yaml  config-zmch4dea.yaml
wandb/sweep-pqklstdj/: config-eb6kdakv.yaml  config-fhegxal7.yaml  config-lsjfnw87.yaml
wandb/sweep-rsb5c6cu/: config-5qzfgfqn.yaml  config-710bj09z.yaml  config-7iyrmjac.yaml  config-bsq1ihol.yaml  config-c1j85bk8.yaml  config-f8jou8xk.yaml  config-p75ya1rh.yaml  config-s7bfgtsz.yaml  config-ues3g0f1.yaml  config-zch0rwkz.yaml
(+47 files in other folders)
